test/compile-fail/resolution/use/crate-name/expected.txt
error: unresolved item `a`
  ┌─ ./test/compile-fail/resolution/use/crate-name/top.rhdl:1:12
  │
1 │ use crate::a;
  │            ^ no `a` item in `crate`

